# singularmem

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  clippy.toml  dist-workspace.toml
.cargo/: audit.toml  config.toml
.github/scripts/: median.sh  perf-check.sh
.github/workflows/: ci.yml  dco.yml  npm-publish.yml  publish-cargo.yml  release.yml  smoke-test-windows.yml
.specify/: README.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
crates/: .gitkeep
crates/singularmem-adapter-claude/: Cargo.toml
crates/singularmem-adapter-claude/src/: lib.rs
crates/singularmem-adapter-gemini/: Cargo.toml
crates/singularmem-adapter-gemini/src/: lib.rs
crates/singularmem-adapter-openai/: Cargo.toml
crates/singularmem-adapter-openai/src/: lib.rs
crates/singularmem-core/: Cargo.toml
crates/singularmem-core/benches/: store_perf.rs
crates/singularmem-core/src/: clock.rs  error.rs  export.rs  format.rs  hook.rs  ingest.rs  item.rs  lib.rs  query.rs  rng.rs  schema.rs  store.rs
crates/singularmem-core/tests/: concurrency.rs  format.rs  hook.rs  item_types.rs  multi_hook.rs  property.rs  revisions.rs  store_basics.rs  validation.rs
crates/singularmem-mcp/: Cargo.toml  README.md
crates/singularmem-mcp/src/: config.rs  error.rs  lib.rs  main.rs  server.rs
crates/singularmem-mcp/src/tools/: get.rs  ingest.rs  list.rs  mod.rs  retrieve.rs  revisions.rs  util.rs
crates/singularmem-mcp/tests/: full_write_read_cycle.rs  mcp_handshake.rs  read_only_mode.rs
crates/singularmem-node/: .gitignore  Cargo.toml  README.md  RELEASING.md  index.d.ts  index.js  package.json  tsconfig.json
crates/singularmem-node/npm/aarch64-unknown-linux-gnu/: README.md
crates/singularmem-node/npm/darwin-arm64/: README.md  package.json
crates/singularmem-node/npm/darwin-x64/: README.md  package.json
crates/singularmem-node/npm/linux-x64-gnu/: README.md  package.json
crates/singularmem-node/npm/win32-x64-msvc/: README.md  package.json
crates/singularmem-node/npm/x86_64-pc-windows-msvc/: README.md
crates/singularmem-node/scripts/: patch-index.js
crates/singularmem-node/src/: adapters.rs  error.rs  lib.rs  store.rs  types.rs
crates/singularmem-node/test/: adapters.test.mjs  helpers.mjs  store_get.test.mjs  store_ingest.test.mjs  store_ingest_indexes.test.mjs  store_list.test.mjs  store_meta.test.mjs  store_open.test.mjs  store_retrieve.test.mjs  store_revisions.test.mjs  store_search.test.mjs  types.test.mts
crates/singularmem-retrieve/: Cargo.toml
crates/singularmem-retrieve/src/: adapter.rs  error.rs  lib.rs  retriever.rs  testing.rs
crates/singularmem-search/: Cargo.toml
crates/singularmem-search/benches/: search_perf.rs
crates/singularmem-search/src/: embedder.rs  error.rs  hook.rs  hybrid_query.rs  index.rs  lib.rs  model.rs  query.rs  reindex.rs  result.rs  schema.rs  semantic_query.rs  testing.rs  vector_index.rs
crates/singularmem-search/tests/: concurrency.rs  embedder.rs  embedder_index.rs  embedder_to_search.rs  index_basics.rs  ingest_to_search.rs  integration_real_embedder.rs  property.rs  property_embeddings.rs  query_parser.rs  reindex.rs  vector_index.rs
docs/: mcp-server.md
docs/formats/: store-v1.md
docs/superpowers/plans/: 2026-05-15-bootstrap.md  2026-05-16-memory-store-v0.md  2026-05-16-search-v0-lexical.md  2026-05-17-search-v0-embeddings.md  2026-05-17-search-v0-hybrid.md  2026-05-18-mcp-server-4a.md  2026-05-18-mcp-server-4b.md  2026-05-18-provider-adapter-claude-3b.md  2026-05-18-provider-adapter-gemini-3d.md  2026-05-18-provider-adapter-openai-3c.md  2026-05-18-provider-adapters-3a.md  2026-05-18-ts-sdk-5a.md  2026-05-19-ts-sdk-5b.md  2026-05-19-ts-sdk-5c.md  2026-05-20-cli-distribution-7.md  2026-05-20-distribution-6.md  2026-05-21-release-infra-hygiene-8.md  2026-05-21-windows-msvc-fix-9.md  2026-05-23-crates-io-publish-10.md  README.md
docs/superpowers/specs/: 2026-05-15-bootstrap-design.md  2026-05-16-memory-store-v0-design.md  2026-05-16-search-v0-lexical-design.md  2026-05-17-search-v0-embeddings-design.md  2026-05-17-search-v0-hybrid-design.md  2026-05-18-mcp-server-4a-design.md  2026-05-18-mcp-server-4b-design.md  2026-05-18-provider-adapter-claude-3b-design.md  2026-05-18-provider-adapter-gemini-3d-design.md  2026-05-18-provider-adapter-openai-3c-design.md  2026-05-18-provider-adapters-3a-design.md  2026-05-18-ts-sdk-5a-design.md  2026-05-19-ts-sdk-5b-design.md  2026-05-19-ts-sdk-5c-design.md  2026-05-20-cli-distribution-7-design.md  2026-05-20-distribution-6-design.md  2026-05-21-release-infra-hygiene-8-design.md  2026-05-21-windows-msvc-fix-9-design.md  2026-05-23-crates-io-publish-10-design.md  README.md
src/: main.rs
tests/: cli.rs
