[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.8.0"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
repository = "https://github.com/bromso/singularmem"
authors = ["Jonas Broms"]

[workspace.dependencies]
rusqlite = { version = "=0.32.1", features = ["bundled"] }
ulid = { version = "1.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
jiff = { version = "0.1", features = ["serde"] }
tracing = "0.1"
tantivy = "=0.22.1"
# online feature enables TextEmbedding::try_new (gated by #[cfg(feature="online")])
fastembed = { version = "=4.4.0", default-features = false, features = ["ort-download-binaries", "online"] }
usearch = "=2.15.3"
bincode = "1.3"

# Dev dependencies (used by both core and root binary tests)
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[package]
name = "singularmem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
singularmem-core = { path = "crates/singularmem-core" }
singularmem-search = { path = "crates/singularmem-search", features = ["testing"] }
singularmem-retrieve = { path = "crates/singularmem-retrieve" }
singularmem-adapter-claude = { path = "crates/singularmem-adapter-claude" }
singularmem-adapter-openai = { path = "crates/singularmem-adapter-openai" }
singularmem-adapter-gemini = { path = "crates/singularmem-adapter-gemini" }
clap = { version = "4.5", features = ["derive", "wrap_help"] }
dirs = "5"
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

[[bin]]
name = "singularmem"
path = "src/main.rs"
