[package]
name = "singularmem-adapter-openai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Singularmem retrieval adapter for OpenAI/Codex (pure formatter, no HTTP)."

[lints]
workspace = true

[dependencies]
singularmem-retrieve = { path = "../singularmem-retrieve", version = "0.16.0" }

[dev-dependencies]
singularmem-core = { path = "../singularmem-core", version = "0.16.0" }
singularmem-search = { path = "../singularmem-search", version = "0.16.0" }
jiff = { workspace = true }
