[package]
name = "singularmem-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Model Context Protocol (MCP) server for Singularmem (stdio transport, read-only foundation)."

[lints]
workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive", "wrap_help", "env"] }
dirs = "5"

[[bin]]
name = "singularmem-mcp"
path = "src/main.rs"
