[package]
name = "singularmem-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Model Context Protocol (MCP) server for Singularmem (stdio transport, read-only foundation)."

[lints]
workspace = true

[dependencies]
singularmem-core = { path = "../singularmem-core" }
singularmem-search = { path = "../singularmem-search" }
singularmem-retrieve = { path = "../singularmem-retrieve" }
singularmem-adapter-claude = { path = "../singularmem-adapter-claude" }
singularmem-adapter-openai = { path = "../singularmem-adapter-openai" }
singularmem-adapter-gemini = { path = "../singularmem-adapter-gemini" }
rmcp = { version = "=1.7.0", features = ["server", "transport-io"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-std"] }
clap = { version = "4.5", features = ["derive", "wrap_help", "env"] }
dirs = "5"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "singularmem-mcp"
path = "src/main.rs"
