[package]
name = "singularmem-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Native Node.js bindings for Singularmem via napi-rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
singularmem-core = { path = "../singularmem-core" }
singularmem-search = { path = "../singularmem-search", features = ["testing"] }
singularmem-retrieve = { path = "../singularmem-retrieve" }
singularmem-adapter-claude = { path = "../singularmem-adapter-claude" }
singularmem-adapter-openai = { path = "../singularmem-adapter-openai" }
singularmem-adapter-gemini = { path = "../singularmem-adapter-gemini" }
napi = { version = "2", default-features = false, features = ["napi8", "tokio_rt", "serde-json"] }
napi-derive = "2"
tokio = { workspace = true, features = ["rt-multi-thread"] }
serde_json = { workspace = true }
jiff = { workspace = true }

[dev-dependencies]

[build-dependencies]
napi-build = "2"

[lints]
workspace = true
