[package]
name = "singularmem-search"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Tantivy-backed lexical search for Singularmem memory stores."

[features]
testing = []

[lints]
workspace = true

[dependencies]
singularmem-core = { path = "../singularmem-core" }
tantivy = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jiff = { workspace = true }
fastembed = { workspace = true }
usearch = { workspace = true }
dirs = "5"
# ort-sys is a transitive dep of fastembed via ort. Cargo resolves ort v2.0.0-rc.9
# to ort-sys rc.12+, but those versions changed the API in a way that is
# incompatible with ort v2.0.0-rc.9. Pin to rc.9 so ort and ort-sys ABI match.
ort-sys = "=2.0.0-rc.9"

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
singularmem-core = { path = "../singularmem-core" }  # for test fixtures

[[bench]]
name = "search_perf"
harness = false
